--- a/css/main.css
+++ b/css/main.css
@@ -11,45 +11,8 @@ body {
     background-color: #065b06;
 }
 
-#buttonboard {
-    position: absolute;
-    bottom: 25px;
-    left: 50%;
-    -ms-transform: translateX(-50%) translateY(0%);
-    -webkit-transform: translate(-50%, 0%);
-    transform: translate(-50%, 0%);
-}
-
-#buttonboard button:hover {
-    background-color: yellow;
-    color: rgb(57, 57, 57);
-}
-
-#buttonboard img{
-    width: 35px;
-    height: 35px;
-    margin-top: 2.5px;
-    position: relative;
-    left: -10px;
-}
-
-#buttonboard select{
-    background-color: rgb(173, 173, 173);
-    color: black;
-    width: 75px;
-    height: 20px;
-    border-radius: 2px;
-    font-size: small;
-}
-
-button {
-    background-color: rgb(0, 0, 0);
-    color: rgb(173, 173, 173);
-    border: 1px solid gray;
-    width: 65px;
-    height: 35px;
-    margin: 5px;
-    display: inline-block;
+button{
+    cursor:pointer;
 }
 
 #board {
@@ -74,35 +37,4 @@ button {
     height: 10px;
     margin: 1px;
     color: white;
-}
-
-#popup_background {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    opacity: 0.25;
-    z-index: 15;
-}
-
-.popup {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-
-    background-color: white;
-    border: solid  #065b06 5px;
-    border-radius: 12px;
-    position: absolute;
-    padding: 20px;
-    width: 335px;
-    z-index: 20;
-}
-
-.popup button{
-    display: inline-block;
-    margin: auto;
 }
