--- a/css/buttons.css
+++ b/css/buttons.css
@@ -13,9 +13,10 @@
 }
 
 #buttonboard img{
-    width: 35px;
-    height: 35px;
+    width: 25px;
+    height: 25px;
     margin-top: 2.5px;
+    margin-left: 10px;;
     position: relative;
     left: -10px;
 }
